--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,4 @@
+
 {
   "development": {
     "username": "root",
@@ -14,10 +15,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "database": "blogger",
-    "host": "localhost",
-    "password":"password",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
