--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,3 @@
-
 {
   "development": {
     "username": "root",
@@ -15,7 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "username": "root",
+    "database": "blogger",
+    "host": "localhost",
+    "password":"password",
     "dialect": "mysql"
   }
 }
