--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "database": "blogger",
-    "host": "localhost",
-    "password":"password",
-    "dialect": "mysql"
+    "use_env_variable": "JAWSDB_URL",
+    "database": "mysql"
   }
 }
